# elastic-query-tenant-relay

./: .dockerignore  .env.example  .gitignore  .mdlrc  .pre-commit-config.yaml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  compose.example.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: common-manual-checks.yaml  linting.yaml  release-image.yaml  tests.yaml  ty-check.yaml
src/eqtr/: __init__.py  api.py  apm.py  clients.py  log.py  main.py  settings.py
tests/: conftest.py  test_api.py  test_apm.py  test_log.py  test_settings.py
