[project]
name = "eqtr"
dynamic = ["version"]
description = "An application that queries the Elasticsearch APIs and caches the results, exposed by a REST API."
readme = "README.md"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]
authors = [
    { name = "Luigi Miazzo", email = "luigi.miazzo@wuerth-it.com" },
    { name = "Davide Sbetti", email = "davide.sbetti@wuerth-it.com" },
]
requires-python = ">=3.14"
dependencies = [
    "apscheduler==3.11.2",
    "elastic-apm==6.25.0",
    "elasticsearch==9.3.0",
    "fastapi==0.135.1",
    "pydantic-settings==2.13.1",
    "uvicorn==0.42.0",
]
[dependency-groups]
dev = ["prek==0.3.8", "pytest==9.0.2", "ruff==0.15.7", "ty==0.0.24"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[project.scripts]
eqtr = "eqtr:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "D", "INP001", "S101", "S106", "INP001"]
